--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,4 +57,5 @@ jobs:
       - name: Run the al_yaqeen
         run: |
           source .venv/bin/activate
+          poetry run python core/manage.py migrate
           poetry run python core/manage.py check
