--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 # To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
 django
-djangorestframework
 django-cors-headers
 django-filter
+djangorestframework
+djoser
 drf-restwind
+pillow
+python-dotenv
+wagtail
 gunicorn
