--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "al-yaqeen"
 version = "0.1.0"
-description = "A Django REST Framework app template with dependency management and DevOps best practices."
+description = "News app"
 authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
 license = "MIT"
 readme = "README.md"
@@ -11,17 +11,23 @@ repository = "https://github.com/youzarsiph/al-yaqeen"
 documentation = "https://github.com/youzarsiph/al-yaqeen"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-django = "^5.1.5"
-django-debug-toolbar = "^5.0.1"
-djangorestframework = "^3.15.2"
-drf-redesign = "^0.4.0"
-django-cors-headers = "^4.6.0"
+python = ">=3.10"
+channels = ">=4.2.2"
+daphne = ">=4.2.0"
+django = ">=5.2.1"
+django-cors-headers = ">=4.7.0"
+django-filter = ">=25.1"
+djangorestframework = ">=3.16.0"
+djoser = ">=2.3.1"
+drf-restwind = ">=0.2.0"
+pillow = ">=11.2.1"
+python-dotenv = ">=1.1.0"
+wagtail = ">=7.0"
 
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.9.2"
-black = "^24.10.0"
+black = ">=25.1.0"
+ruff = ">=0.11.9"
 
 [build-system]
 requires = ["poetry-core"]
