--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
 django
 django-cors-headers
+django-extensions
 django-filter
 djangorestframework
 djoser
