--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ daphne = ">=4.2.0"
 django = ">=5.2.1"
 django-cors-headers = ">=4.7.0"
 django-countries = ">=7.6.1"
+django-debug-toolbar = ">=6.0.0"
 django-filter = ">=25.1"
 django-phonenumber-field = ">=9.0.8"
 djangorestframework = ">=3.16.0"
