update ci/cd workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,25 +35,72 @@ jobs:
           echo "AUTH_USER_MODEL = 'users.User'" >> core/settings.py
           echo "INSTALLED_APPS += [" >> core/settings.py
           echo "    'tcn'," >> core/settings.py
-          echo "    'tcn.ai'," >> core/settings.py
           echo "    'tcn.apps.articles'," >> core/settings.py
-          echo "    'tcn.categories'," >> core/settings.py
-          echo "    'tcn.apps.comments'," >> core/settings.py
-          echo "    'tcn.apps.reactions'," >> core/settings.py
+          echo "    'tcn.apps.blog'," >> core/settings.py
+          echo "    'tcn.apps.categories'," >> core/settings.py
+          echo "    'tcn.apps.home'," >> core/settings.py
+          echo "    'tcn.apps.links'," >> core/settings.py
+          echo "    'tcn.apps.tags'," >> core/settings.py
+          echo "    'tcn.apps.users'," >> core/settings.py
+          echo "    'tcn.cms'," >> core/settings.py
           echo "    'tcn.ui'," >> core/settings.py
-          echo "    'tcn.users'," >> core/settings.py
-          echo "    'rest_wind'," >> core/settings.py
+          echo "    'django_countries'," >> core/settings.py
+          echo "    'phonenumber_field'," >> core/settings.py
           echo "    'django_filters'," >> core/settings.py
-          echo "    'corsheaders'" >> core/settings.py
-          echo "    'rest_framework'" >> core/settings.py
+          echo "    'rest_wind'," >> core/settings.py
+          echo "    'corsheaders'," >> core/settings.py
+          echo "    'djoser'," >> core/settings.py
+          echo "    'rest_framework'," >> core/settings.py
+          echo "    'rest_framework.authtoken'," >> core/settings.py
+          echo "    'wagtail_localize'," >> core/settings.py
+          echo "    'wagtail_localize.locales'," >> core/settings.py
+          echo "    'wagtail.contrib.frontend_cache'," >> core/settings.py
+          echo "    'wagtail.contrib.search_promotions'," >> core/settings.py
+          echo "    'wagtail.contrib.forms'," >> core/settings.py
+          echo "    'wagtail.contrib.redirects'," >> core/settings.py
+          echo "    'wagtail.embeds'," >> core/settings.py
+          echo "    'wagtail.sites'," >> core/settings.py
+          echo "    'wagtail.users'," >> core/settings.py
+          echo "    'wagtail.snippets'," >> core/settings.py
+          echo "    'wagtail.documents'," >> core/settings.py
+          echo "    'wagtail.images'," >> core/settings.py
+          echo "    'wagtail.search'," >> core/settings.py
+          echo "    'wagtail.admin'," >> core/settings.py
+          echo "    'wagtail'," >> core/settings.py
+          echo "    'modelcluster'," >> core/settings.py
+          echo "    'taggit'," >> core/settings.py
           echo "]" >> core/settings.py
+          echo "MIDDLEWARE += ['wagtail.contrib.redirects.middleware.RedirectMiddleware']" >> core/settings.py
 
           # Setup URLConf
-          echo "from django.urls import include" >> core/urls.py
-          echo "urlpatterns += [path('', include('tcn.urls'))]" >> core/urls.py
+          echo "from django.conf import settings" >> core/urls.py
+          echo "from django.conf.urls.i18n import i18n_patterns" >> core/urls.py
+          echo "from django.conf.urls.static import static" >> core/urls.py
+          echo "from django.urls import include, re_path" >> core/urls.py
+          echo "from wagtail import urls as wagtail_urls" >> core/urls.py
+          echo "from wagtail.admin import urls as wagtailadmin_urls" >> core/urls.py
+          echo "from wagtail.documents import urls as wagtaildocs_urls" >> core/urls.py
+          echo "from wagtail.images.views.serve import ServeView" >> core/urls.py
+          echo "urlpatterns += [" >> core/urls.py
+          echo "    path('', include('django.conf.urls.i18n'))," >> core/urls.py
+          echo "    re_path( r'^images/([^/]*)/(\d*)/([^/]*)/[^/]*$', ServeView.as_view(), name='wagtailimages_serve')," >> core/urls.py
+          echo "] + static(settings.MEDIA_URL, document_root=settings.MEDIA_ROOT)" >> core/urls.py
+          echo "urlpatterns += i18n_patterns(" >> core/urls.py
+          echo "    path('admin/', admin.site.urls)," >> core/urls.py
+          echo "    path('api/', include('rest_framework.urls'))," >> core/urls.py
+          echo "    path('api/', include('djoser.urls'))," >> core/urls.py
+          echo "    path('api/', include('djoser.urls.authtoken'))," >> core/urls.py
+          echo "    path('documents/', include(wagtaildocs_urls))," >> core/urls.py
+          echo "    path('dashboard/', include(wagtailadmin_urls))," >> core/urls.py
+          echo "    path('', include('django.contrib.auth.urls'))," >> core/urls.py
+          echo "    path('api/', include('tcn.api.urls'))," >> core/urls.py
+          echo "    path('', include('tcn.ui.urls', namespace='ui'))," >> core/urls.py
+          echo "    path('', include(wagtail_urls))," >> core/urls.py
+          echo ")" >> core/urls.py
 
       - name: Run the tcn
         run: |
           source .venv/bin/activate
           poetry run python core/manage.py migrate
           poetry run python core/manage.py check
+          poetry run python core/manage.py test
