--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ django-countries = ">=7.6.1"
 django-debug-toolbar = ">=6.0.0"
 django-filter = ">=25.1"
 django-phonenumber-field = ">=9.0.8"
+django-w-blog = ">=0.1.0"
 djangorestframework = ">=3.16.0"
 djoser = ">=2.3.1"
 drf-restwind = ">=0.2.0"
