integrate django-w-docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ django-debug-toolbar = ">=6.0.0"
 django-filter = ">=25.1"
 django-phonenumber-field = ">=9.0.8"
 django-w-blog = ">=0.1.0"
+django-w-docs = ">=0.1.5"
 djangorestframework = ">=3.16.0"
 djoser = ">=2.3.1"
 drf-restwind = ">=0.2.0"
