--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ django = ">=5.2.1"
 django-cors-headers = ">=4.7.0"
 django-countries = ">=7.6.1"
 django-debug-toolbar = ">=6.0.0"
+django-extensions = ">=4.1"
 django-filter = ">=25.1"
 django-phonenumber-field = ">=9.0.8"
 django-w-blog = ">=0.1.0"
