--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ django-debug-toolbar = ">=6.0.0"
 django-extensions = ">=4.1"
 django-filter = ">=25.1"
 django-phonenumber-field = ">=9.0.8"
-django-w-blog = ">=0.1.6"
+django-w-blog = ">=0.2.0"
+django-w-careers = ">=0.1.3"
 django-w-docs = ">=1.0.0"
 djangorestframework = ">=3.16.0"
 djoser = ">=2.3.1"
