--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-extensions
 django-filter
 django-phonenumber-field
 django-w-blog
+django-w-careers
 django-w-docs
 djangorestframework
 djoser
