--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ django-w-docs = ">=1.0.6"
 djangorestframework = ">=3.16.0"
 djoser = ">=2.3.1"
 drf-restwind = ">=0.2.0"
+huggingface-hub = ">=0.35.3"
 markdown = ">=3.8"
 phonenumbers = ">=9.0.10"
 pygments = ">=2.19.1"
