--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ description = "The Certain News"
 authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
 license = "MIT"
 readme = "README.md"
-packages = [{ include = "app" }]
+packages = [{ include = "tcn" }]
 homepage = "https://github.com/youzarsiph/the-certain-news"
 repository = "https://github.com/youzarsiph/the-certain-news"
 documentation = "https://github.com/youzarsiph/the-certain-news"
 
 [tool.poetry.dependencies]
-python = ">=3.13"
+python = ">=3.11"
 channels = ">=4.2.2"
 daphne = ">=4.2.0"
 django = ">=5.2.1"
@@ -26,7 +26,7 @@ django-w-careers = ">=1.0.5"
 django-w-docs = ">=1.0.8"
 djangorestframework = ">=3.16.0"
 djoser = ">=2.3.1"
-drf-restwind = ">=0.2.0"
+drf-restwind = ">=1.0.2"
 huggingface-hub = ">=0.35.3"
 phonenumbers = ">=9.0.10"
 pillow = ">=11.2.1"
