Refactor codebase to improve consistency and organization, including updates to CI configuration, model references, and test structure.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,4 +103,4 @@ jobs:
           source .venv/bin/activate
           poetry run python core/manage.py migrate
           poetry run python core/manage.py check
-          poetry run python core/manage.py test
+          poetry run python core/manage.py test --parallel
